LAB3 - Zrefaktoryzowalem testy dla PatientServiceTest aby uzywaly nowego API.